src/components/Body/Body.scss
@use "../../styles/partials/_mixins.scss" as *;
@use "../../styles/partials/_variables.scss" as *;

main {
  .banner {
    color: $primary-white;
    position: relative;
    min-height: 100vh;
    display: flex;
    align-items: center;

    background-image: url("../../assets/images/background.jpg");
    background-position: top;
    background-size: cover;

    &:after {
      content: "";
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      z-index: 0;
      background-color: $primary-black;
      opacity: 0.1;
    }

    .container {
      position: relative;
      z-index: 1;

      h1 {
        font-size: 72px;
        margin-bottom: 32px;

        span {
          color: $header-yellow;
        }

        @media (max-width: 767px) {
          font-size: 50px;
        }
        @media (max-width: 425px) {
          font-size: 40px;
        }
      }

      h3 {
        font-size: 36px;
        font-weight: 700;
        margin-bottom: 32px;

        @media (max-width: 425px) {
          font-size: 28px;
        }
      }
    }

    .infinite {
      display: inline-block;

      &__title {
        padding: 0;
        margin: 0;
        color: $primary-white;
        font-size: 60px;
        letter-spacing: 1px;
      }
    }

    .typewriter h3 {
      color: $primary-white;
      overflow: hidden; /* Ensures the content is not revealed until the animation */
      border-right: 0.15em solid orange; /* The typwriter cursor */
      white-space: nowrap; /* Keeps the content on a single line */
      margin: 0 auto; /* Gives that scrolling effect as the typing happens */
      letter-spacing: 0.18em; /* Adjust as needed */
      animation: typing 3s steps(38, end), blink-caret 0.5s step-end infinite;
    }

    /* The typing effect */
    @keyframes typing {
      from {
        width: 0;
      }
      to {
        width: 100%;
      }
    }

    /* The typewriter cursor effect */
    @keyframes blink-caret {
      from,
      to {
        border-color: transparent;
      }
      50% {
        border-color: orange;
      }
    }
  }

  .about {
    background-color: $primary-white;
    border: 1px solid transparent;

    &__container {
      @media (max-width: 2000px) {
        padding-top: 4rem;
        margin-top: 4.5rem;
      }

      @media (max-width: 767px) {
        padding-bottom: 64px;
        max-width: 1400px;
      }

      @media (max-width: 425px) {
        margin: 0;
      }
    }

    &__content {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: center;

      @include desktop {
        display: flex;
        justify-content: space-between;
        flex-direction: row;
      }

      @media (max-width: 767px) {
        flex-direction: column;
        justify-content: space-between;
      }

      &--text {
        @media (max-width: 2000px) {
          margin-top: 5rem;
        }

        @include desktop {
          width: 60%;
        }

        @media (max-width: 425px) {
          width: 100%;
        }
      }
    }

    &__description {
      line-height: 1.8;
    }

    &__inner-text {
      margin-bottom: 1rem;
      letter-spacing: 1px;
    }

    &__profile {
      @media (max-width: 767px) {
        margin: 0 auto;
      }

      @media (max-width: 425px) {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        margin-top: 5rem;
      }
    }

    // profile image
    &__headshot {
      @media (max-width: 2000px) {
        border-radius: 50%;
        width: 25rem;
      }

      @media (max-width: 767px) {
        width: 20rem;
      }

      @media (max-width: 425px) {
        border-radius: 50%;
        width: 100%;
      }
    }
  }
}

.techstack {
  @media (max-width: 2000px) {
    margin-top: 5rem;
    margin-bottom: 5rem;
  }

  @media (max-width: 425px) {
    padding: 1rem;
    margin-top: 3rem;
  }

  // sizing the techstack icon itself
  &__icon {
    @media (max-width: 2000px) {
      width: 60%;
    }
    @media (max-width: 767px) {
      width: 75%;
    }
    @media (max-width: 425px) {
      width: 100%;
    }
  }

  &__services-grid {
    @media (max-width: 2000px) {
      margin-top: 5rem;
      display: grid;
      grid-template-columns: repeat(5, 1fr);
      grid-gap: 16px;
    }

    @media (max-width: 767px) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (max-width: 425px) {
      margin-top: 2rem;
    }
  }

  // sizing the techstack icon container itself
  &__service {
    display: flex;
    justify-content: center;

    @media (max-width: 425px) {
      padding: 1rem;
      max-width: 100%;
    }
  }

  &__spacer {
    min-height: 25px;
  }

  .content {
    padding: 16px;
  }
}

.projects {
  padding-top: 64px;
  padding-bottom: 64px;

  .projects-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 20px;
    margin-bottom: 32px;

    @media (max-width: 768px) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (max-width: 767px) {
      grid-template-columns: 1fr;
    }
  }
}

.project {
  position: relative;
  overflow: auto;
  box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
  border-radius: 8px;

  .content {
    h3 {
      font-size: 32px;
      margin-bottom: 16px;

      @media (max-width: 2000px) {
        font-size: 28px;
      }
    }

    p {
      font-size: 18px;
      margin-bottom: 16px;

      @media (max-width: 2000px) {
        font-size: 16px;
      }
    }

    &__photocard {
      height: 13.5rem;
    }

    &__photocard-img {
      width: 100%;
      height: 15rem;
      object-fit: cover;
    }

    &__photocard-container {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: fit-content;
      color: $primary-white;
      background: rgba(0, 0, 0, 0.6);
      line-height: 1.4;
      opacity: 0;
    }

    :hover {
      opacity: 1;
      transition: 0.6s ease-out;
    }

    &__photocard-content {
      padding: 1rem;
    }
  }
}

.buttonBase {
  display: flex;
  justify-content: space-between;
  width: 50%;

  @media (max-width: 425px) {
    width: 70%;
  }

  &__button {
    @include button;

    &:hover {
      color: $primary-white;
      background-color: $primary-black;
      transition: 0.6s ease-out;
    }
  }
}

.test {
  margin-bottom: 2rem;
  text-transform: capitalize;
  font-weight: 400;
}

